--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
-    "next": "16.0.3",
+    "next": "^16.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
